# javaproperties

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.rst  TODO.md  notes.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  changelog.rst  cli.fromjson.rst  cli.main.rst  cli.rst  cli.tojson.rst  conf.py  index.rst  plain.rst  propclass.rst  propfile.rst  requirements.txt  util.rst  xmlprops.rst
javaproperties/: __init__.py  __main__.py  fromjson.py  json2properties.py  propclass.py  properties2json.py  propfile.py  reading.py  tojson.py  util.py  writing.py  xml.py  xmlprops.py
javaproperties/commands/: json2properties.py  properties2json.py
meta/: Canonicalize.java  Dockerfile  ListProps.java  Properties2XML.java  Properties2json.java  notes.md  test01.properties  test02.properties
src/javaproperties/: __init__.py  propclass.py  propfile.py  reading.py  util.py  writing.py  xmlprops.py
test/: conftest.py  test_cmd_delete.py  test_cmd_format.py  test_cmd_get.py  test_cmd_select.py  test_cmd_set.py  test_dump_xml.py  test_dumps.py  test_dumps_xml.py  test_escape.py  test_java_timestamp.py  test_join_key_value.py  test_jpreplace.py  test_load_xml.py  test_loads.py  test_loads_xml.py  test_parse.py  test_propclass.py  test_propfile.py  test_reading.py  test_to_comment.py  test_unescape.py  test_util.py  test_writing.py
